rename font-size, line-height, font-weight

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -62596,12 +62596,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .a90wtny[class][class] {
-  font-size: var(--f-cv-j-j-p);
-  line-height: var(--f-l-h-bac);
+  font-size: var(--font-size-xs);
+  line-height: var(--font-size);
   color: var(--gray-500);
   display: inline-block;
   flex: 0 0 auto;
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
 }
 .dir-ltr.a90wtny[class][class] {
   margin-left: var(--spacer-5);
@@ -62629,7 +62629,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex;
   white-space: nowrap;
   width: 100%;
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
   display: flex;
   align-items: center;
 }
@@ -62760,8 +62760,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .b10i5eq[class][class] {
   color: var(--white);
-  font-size: var(--hr-k-udr);
-  font-weight: var(--h-oqhch);
+  font-size: var(--font-size-xxs);
+  font-weight: var(--font-weight-bold);
   height: 1rem;
   min-width: 1rem;
   line-height: 16px;
@@ -63639,7 +63639,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .t1yinsi3[class][class] {
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
-  font-weight: var(--h-oqhch);
+  font-weight: var(--font-weight-bold);
   line-height: var(--line-height-sm);
   overflow: hidden;
   text-overflow: ellipsis;
@@ -63657,8 +63657,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .tv0loi4[class][class] {
-  font-size: var(--f-cv-j-j-p);
-  line-height: var(--f-l-h-bac);
+  font-size: var(--font-size-xs);
+  line-height: var(--font-size);
 }
 .c2omdfz[class][class] {
   position: absolute;
@@ -63760,9 +63760,9 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border-bottom-left-radius: var(--media-container_border-radius);
 }
 .tl3qa0j[class][class] {
-  font-size: var(--ll-l-ys-f);
-  line-height: var(--f-xgviq);
-  line-height: var(--f-xgviq);
+  font-size: var(--font-size-md);
+  line-height: var(--line-height-xl);
+  line-height: var(--line-height-xl);
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -63809,7 +63809,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 .o1n80548[class][class] {
   color: var(--theme_typography-color-primary, var(--gray-900));
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
 }
 .dir-ltr.o1n80548[class][class] {
   margin: var(--margin-top, 0) var(--margin-right, 0) var(--margin-bottom, 0)
@@ -63860,8 +63860,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: var(--line-height-md);
 }
 .p9uyiz2[class][class] {
-  font-size: var(--ll-l-ys-f);
-  line-height: var(--f-xgviq);
+  font-size: var(--font-size-md);
+  line-height: var(--line-height-xl);
 }
 .c133dmqg[class][class] {
   height: 100%;
