add additional content

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -66137,3 +66137,332 @@ label {
   height: 100% !important;
   width: 100% !important;
 }
+
+/* TRIPS-SPECIFIC CLASSES */
+.cs1cq6p[class][class] {
+	position: relative;
+}
+.dir.p1c4i207[class][class] {
+	left: 0px;
+	right: 0px;
+}
+.p1c4i207[class][class] {
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+}
+.dir.cw2jl8z[class][class] {
+	padding-top: 24px;
+	padding-bottom: 24px;
+}
+.cw2jl8z[class][class] {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: center;
+}
+@media (min-width: 744px){
+  .cw2jl8z[class][class] {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+.tra1v2p[class][class] {
+	display: flex;
+	align-items: center;
+}
+.dir-ltr.i1ldgrtx[class][class] {
+	margin-right: 16px;
+}
+.dir.i1ldgrtx[class][class] {
+	border-radius: 8px;
+}
+.i1ldgrtx[class][class] {
+	flex: 0 0 auto;
+	overflow: hidden;
+	position: relative;
+}
+._1h6n1zu {
+	background-position: 50% 50% !important;
+	background-repeat: no-repeat !important;
+}
+._15p4g025 {
+	display: inline-block !important;
+	vertical-align: bottom !important;
+	height: 100% !important;
+	width: 100% !important;
+	background-position: 50% 50% !important;
+	background-repeat: no-repeat !important;
+}
+@supports (object-fit: cover){
+  ._15p4g025 {
+    display: none !important;
+    background-image: none !important;
+  }  
+}
+._6tbg2q {
+	height: 0px !important;
+	width: 0px !important;
+	position: absolute !important;
+}
+@supports (object-fit: cover){
+  ._6tbg2q {
+    height: 100% !important;
+    width: 100% !important;
+  }  
+}
+.b1t0qutr[class][class] {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.dir.b1t0qutr[class][class] {
+	margin-top: 24px;
+}
+@media (min-width: 744px){
+  .dir.b1t0qutr[class][class] {
+    margin-top: 0px;
+  }  
+}
+.dir.c1cjmhqs[class][class] {
+	margin: 0px 10px;
+}
+.dir-ltr.c1cjmhqs[class][class]:first-of-type {
+	margin-left: 0px;
+}
+@media (min-width: 744px){
+  .dir.c1cjmhqs[class][class] {
+    margin: 0 8px;
+  }  
+}
+.c1rg5r8u[class][class] {
+	list-style-type: none;
+	margin-block: 0px;
+}
+.dir.c1rg5r8u[class][class] {
+	padding-inline-start: 0px;
+}
+.i1c0h3vv[class][class] {
+	list-style: none;
+}
+.dir.i1c0h3vv[class][class] {
+  margin-bottom: 24px;
+}
+.dir.i1c0h3vv[class][class]:last-of-type {
+	margin-bottom: 0px;
+}
+._151wof4v {
+	white-space: pre-line !important;
+	max-width: 100% !important;
+	font-size: var(--tl-font-size, 32px) !important;
+	font-weight: var(--tl-font-weight, 800) !important;
+	letter-spacing: var(--tl-letter-spacing, 0em) !important;
+	line-height: var(--tl-line-height, 36px) !important;
+	color: var(--tl-color, #222222) !important;
+	-webkit-line-clamp: var(--tl-line-clamp) !important;
+	overflow: hidden !important;
+	display: -webkit-box !important;
+	-moz-box-orient: vertical !important;
+	text-overflow: ellipsis !important;
+}
+.dir.ccf8p5q[class][class] {
+	margin-top: 24px;
+}
+@media (min-width: 1128px){
+  .gjz9tiy[class][class] {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0px, 1fr));
+    column-gap: 16px;
+  }  
+}
+@media (min-width: 1128px){
+  .g1ljmos8[class][class] {
+    grid-column: span 2;
+    display: inline-block;
+  }  
+}
+@media (min-width: 1128px){
+  .dir-ltr.g1ljmos8[class][class] {
+    margin-right: 32px;
+  }  
+}
+
+.cj9jr2o[class][class] {
+	position: relative;
+	height: 100%;
+}
+.c1ab4kh2[class][class] {
+	overflow: hidden;
+	height: 100%;
+}
+.dir.c1ab4kh2[class][class] {
+  border-radius: 12px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+}
+@media (min-width: 744px){
+  .c1ab4kh2[class][class] {
+    display: flex;
+    flex-direction: row-reverse;
+  }  
+}
+.pptaptv[class][class] {
+	height: 163px;
+	position: relative;
+	overflow: hidden;
+}
+@media (min-width: 744px){
+  .pptaptv[class][class] {
+    height: auto;
+    flex: 1 0 auto;
+  }  
+}
+.krt5o27[class][class] {
+	position: absolute;
+	top: 8px;
+}
+.dir.krt5o27[class][class] {
+  background-color: #FFF;
+  padding: 3px 8px;
+  border: 1px solid #0000000a;
+  border-radius: 4px;
+}
+.dir-ltr.krt5o27[class][class] {
+	left: 8px;
+}
+._e8yefda {
+	white-space: pre-line !important;
+	max-width: 100% !important;
+	font-size: var(--tl-font-size, 14px) !important;
+	font-weight: var(--tl-font-weight, 400) !important;
+	letter-spacing: var(--tl-letter-spacing, 0em) !important;
+	line-height: var(--tl-line-height) !important;
+	color: var(--tl-color, #717171) !important;
+	-webkit-line-clamp: 2 !important;
+	overflow: hidden !important;
+	display: -webkit-box !important;
+	-moz-box-orient: vertical !important;
+	text-overflow: ellipsis !important;
+}
+@supports (overflow: clip){
+  ._e8yefda {
+    overflow: clip !important;
+  }
+}
+._npr0qi {
+	border-top-width: 1px !important;
+	border-top-style: solid !important;
+}
+.t15kgfic[class][class] {
+	flex: 0 0 50%;
+}
+@media (min-width: 744px){
+  .t15kgfic[class][class] {
+    flex: 0 0 calc(50% + 8px);
+  }  
+}
+.dir.tkmrifx[class][class] {
+	margin: 24px;
+}
+.dir.t1fl57ov[class][class] {
+	margin-bottom: 24px;
+}
+.dir.t1x7kc86[class][class] {
+	margin-bottom: 0px;
+}
+._y9cbsa {
+	white-space: pre-line !important;
+	max-width: 100% !important;
+	font-size: var(--tl-font-size, 14px) !important;
+	font-weight: var(--tl-font-weight, 400) !important;
+	letter-spacing: var(--tl-letter-spacing, 0em) !important;
+	line-height: var(--tl-line-height, 18px) !important;
+	color: var(--tl-color, #222222) !important;
+	-webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+.dir.sgctd8i[class][class] {
+	margin-top: 6px;
+}
+.d1fngnvj[class][class] {
+	display: flex;
+	align-items: stretch;
+}
+.dir.d1fngnvj[class][class] {
+  border-top: 1px solid #DDD;
+  padding-top: 16px;
+  padding-bottom: 1px;
+}
+@media (min-width: 744px){
+  .d1fngnvj[class][class] {
+    flex: 1 1 auto;
+  }  
+}
+.dvrhnu7[class][class] {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.lomse6a[class][class] {
+	flex: 0 0 auto;
+}
+.dir-ltr.lomse6a[class][class] {
+	margin-right: 16px;
+}
+@media (min-width: 744px){
+  .dir-ltr.lomse6a[class][class] {
+    margin-right: 24px;
+  }  
+}
+._6mwb4c {
+	white-space: pre-line !important;
+	max-width: 100% !important;
+	font-size: var(--tl-font-size, 14px) !important;
+	font-weight: var(--tl-font-weight, 400) !important;
+	letter-spacing: var(--tl-letter-spacing, 0em) !important;
+	line-height: var(--tl-line-height, 18px) !important;
+	color: var(--tl-color, #717171) !important;
+	-webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+._158ouaov {
+	white-space: pre-line !important;
+	max-width: 100% !important;
+	font-size: var(--tl-font-size, 14px) !important;
+	font-weight: var(--tl-font-weight, 400) !important;
+	letter-spacing: var(--tl-letter-spacing, 0em) !important;
+	line-height: var(--tl-line-height, 18px) !important;
+	color: var(--tl-color, #717171) !important;
+	-webkit-line-clamp: var(--tl-line-clamp) !important;
+	overflow: hidden !important;
+	display: -webkit-box !important;
+	-moz-box-orient: vertical !important;
+	text-overflow: ellipsis !important;
+}
+.t1scrubd[class][class] {
+	flex: 1 1 auto;
+	user-select: all;
+}
+.dir-ltr.t1scrubd[class][class] {
+  border-left: 1px solid #DDD;
+  padding-left: 16px;
+}
+@media (min-width: 744px){
+  .dir-ltr.t1scrubd[class][class] {
+    padding-left: 24px;
+  }  
+}
+._1ynbv25 {
+	display: block !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
